docs/tests/parser/control_flow/valid/SwitchOnlyDefault.src
fn void test() {
    switch (x) {
        default {
        }
    }
}
