docs/tests/parser/control_flow/invalid/ElifWithoutIf.src
fn void test() {
    elif (true) {
    }
}
